Add Zenodo badge to protocol page

--- a/protocol.qmd
+++ b/protocol.qmd
@@ -14,5 +14,5 @@ This page provides direct access to the current protocol files and metadata temp
 - [Example Metadata (CSV)](https://zenodo.org/record/15850109/files/IHerbSpec_metadata-examples.csv)
 - [Table A1 Scoring Examples (CSV)](https://zenodo.org/record/15850109/files/IHerbSpecProtocol_TableA1.csv)
 
-> 🧾 **The protocol is archived and version controlled at DOI:** [10.5281/zenodo.15849668](https://doi.org/10.5281/zenodo.15849668)
+> 🧾 **The protocol is archived and version controlled at: [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.15849668.svg)](https://doi.org/10.5281/zenodo.15849668)
 
