Update protocol page with direct GitHub file links

--- a/protocol.qmd
+++ b/protocol.qmd
@@ -6,13 +6,13 @@ The **IHerbSpec Protocol** defines standardized procedures for spectral measurem
 
 This page provides direct access to the current protocol files and metadata templates.
 
-### 📥 Download IHerbSpec Protocol
+### 📥 Download IHerbSpec Protocol Files
 
-- [Protocol (PDF)](https://zenodo.org/record/15850109/files/IHerbSpec%20Protocol%20v1.0.pdf)
-- [Protocol (DOCX)](https://zenodo.org/record/15850109/files/IHerbSpec%20Protocol%20v1.0.docx)
-- [Metadata Template (CSV)](https://zenodo.org/record/15850109/files/IHerbSpec_metadata.csv)
-- [Example Metadata (CSV)](https://zenodo.org/record/15850109/files/IHerbSpec_metadata-examples.csv)
-- [Table A1 Scoring Examples (CSV)](https://zenodo.org/record/15850109/files/IHerbSpecProtocol_TableA1.csv)
+- [Protocol v1.0 (PDF)](https://raw.githubusercontent.com/IHerbSpec/IHerbSpec-protocol/main/IHerbSpec%20Protocol%20v1.0.pdf)
+- [Protocol v1.0 (DOCX)](https://raw.githubusercontent.com/IHerbSpec/IHerbSpec-protocol/main/IHerbSpec%20Protocol%20v1.0.docx)
+- [Metadata Template (CSV)](https://raw.githubusercontent.com/IHerbSpec/IHerbSpec-protocol/main/IHerbSpec_metadata.csv)
+- [Example Metadata (CSV)](https://raw.githubusercontent.com/IHerbSpec/IHerbSpec-protocol/main/IHerbSpec_metadata-examples.csv)
+- [Table A1 Scoring Examples (CSV)](https://raw.githubusercontent.com/IHerbSpec/IHerbSpec-protocol/main/IHerbSpecProtocol_TableA1.csv)
 
 > 🧾 **The protocol is archived and version controlled at: [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.15849668.svg)](https://doi.org/10.5281/zenodo.15849668)
 
