--- a/publications.qmd
+++ b/publications.qmd
@@ -4,8 +4,8 @@ title: "Publications"
 
 ### Selected Publications and Preprints
 
-- Cavender-Bares J, White DM, et al. (*In Review*). *Next-generation specimen digitization: The international herbarium community goes spectral!* [EcoEvoRxiv](https://doi.org/10.32942/X2V927)
-- White DM, Cavender-Bares J, et al. (2025). *Seeing herbaria in a new light: Leaf reflectance spectroscopy unlocks trait and classification modeling.* [New Phytologist](https://doi.org/10.1111/nph.70357)
-- Neto-Bradley BM, et al. (2025). *Using reflectance spectra and Pl@ntNet to identify herbarium specimens.* [New Phytologist](https://doi.org/10.1111/nph.70258)
+- Cavender-Bares J, White DM, Ahlstrand NI, Austin M, Bastianelli D, Bazan S, Boughalmi K, Cardinal-McTeague W, Chacón-Madrigal E, Couvreur TLP, Davis C, Durgante FM, Grace OM, Q JAG, Hansen K, Hernández-Leal MS, Hopkins MJG, Jackson R, Kothari S, Lee AK, Léveillé-Bourret É, Pinto-Ledezma J, Casaverde NLQ, Meireles JE, Nichodemus CO, Schmull M, Soltis DE, Soltis PS, Tuomisto H, Ustin S, Vasconcelos CC. 2025. *NextGeneration specimen digitization: The international herbarium community goes spectral!* [EcoEvoRxi]v [preprint]. https://doi.org/10.32942/X2V927
+- White DM, Cavender-Bares J, Davis CC, Guzmán Q JA, Kothari S, Robles JM, Meireles JE. (2025). *Seeing herbaria in a new light: Leaf reflectance spectroscopy unlocks trait and classification modeling.* [New Phytologist](https://doi.org/10.1111/nph.70357)
+- Neto-Bradley BM, Bonnet P, Goëau H, Joly A, Cavender-Bares J, Coomes DA. (2025). *Using reflectance spectra and Pl@ntNet to identify herbarium specimens.* [New Phytologist](https://doi.org/10.1111/nph.70258)
 
 More coming soon.
