--- a/publications.qmd
+++ b/publications.qmd
@@ -1,23 +1,20 @@
 ---
-title: "Publications"
+title: "Selected Publications"
 ---
 
-### Selected Publications
-
-
+### Working Group Contributions to Herbarium-based Spectral Research  
 
 Cavender-Bares, J., D.M. White, N.I. Ahlstrand, M. Austin, D. Bastianelli, S. Bazan, K. Boughalmi, W. Cardinal-McTeague, E. Chacón-Madrigal, T.L.P. Couvreur, C. Davis, F.M. Durgante, O.M. Grace, J.A. Guzmán Q., K. Hansen, M.S. Hernández-Leal, M.J.G. Hopkins, R. Jackson, S. Kothari, A.K. Lee, É. Léveillé-Bourret, J. Pinto-Ledezma, N.L.Q. Casaverde, J.E. Meireles, C.O. Nichodemus, M. Schmull, D.E. Soltis, P.S. Soltis, H. Tuomisto, S. Ustin, C.C. Vasconcelos. 2025. *Next-generation specimen digitization: The international herbarium community goes spectral!* **EcoEvoRxiv** [preprint].  
 [https://doi.org/10.32942/X2V927](https://doi.org/10.32942/X2V927)
 
 ---
 
-Neto-Bradley, B.M., P. Bonnet, H. Goëau, A. Joly, J. Cavender-Bares, D.A. Coomes. 2025. *Using reflectance spectra and Pl@ntNet to identify herbarium specimens: A case study with* Lithocarpus. **New Phytologist**
+Neto-Bradley, B.M., P. Bonnet, H. Goëau, A. Joly, J. Cavender-Bares, D.A. Coomes. 2025. *Using reflectance spectra and Pl@ntNet to identify herbarium specimens: A case study with* Lithocarpus. **New Phytologist**.
 [https://doi.org/10.1111/nph.70258](https://doi.org/10.1111/nph.70258)
 
 ---
 
-White, D.M., J. Cavender-Bares, C.C. Davis, J.A. Guzmán Q., S. Kothari, J.M. Robles, J.E. Meireles. 2025. *Seeing herbaria in a new light: Leaf reflectance spectroscopy unlocks trait and classification modeling in plant biodiversity collections.* **New Phytologist**,
+White, D.M., J. Cavender-Bares, C.C. Davis, J.A. Guzmán Q., S. Kothari, J.M. Robles, J.E. Meireles. 2025. *Seeing herbaria in a new light: Leaf reflectance spectroscopy unlocks trait and classification modeling in plant biodiversity collections.* **New Phytologist**.  
 [https://doi.org/10.1111/nph.70357](https://doi.org/10.1111/nph.70357)
 
 ---
-
