--- a/protocol.qmd
+++ b/protocol.qmd
@@ -1,20 +1,136 @@
 ---
-title: "The IHerbSpec Protocol"
+title: "."
+page-layout: full
+title-block-banner: "images/spectroscopy-setup.png"
+include-after-body:
+  text: |
+    <div style="text-align:center; padding-bottom:2em;">
+      CC BY 4.0 — <em>IHerbSpec Protocol</em>. 
+      DOI: <a href="https://doi.org/10.5281/zenodo.15849668">10.5281/zenodo.15849668</a>
+    </div>
 ---
 
-The **IHerbSpec Protocol** defines a standardized procedure for spectral measurement of herbarium specimens—alongside detailed guidance, metadata standards, and supporting rationale to facilitate broad implementation across institutions.
+<!-- Page-only styles (won’t affect other pages) -->
+<style>
+  /* Center the big page title */
+  #title-block-header .title { text-align: center; }
 
-This page provides direct access to the current protocol files and metadata templates.
+  /* Make page body text larger */
+  main#quarto-document-content { font-size: 1.125rem; line-height: 1.7; }
 
-### 📥 Download IHerbSpec Protocol v1.0 Files
+  /* Center figure captions */
+  .quarto-figure figcaption { text-align: center; }
+  
+  /* Limit text width */
+  .content-narrow {
+    max-width: 70ch;
+    margin-left: auto;
+    margin-right: auto;
+  }
+</style>
 
-- [Protocol v1.0 (PDF)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/main/IHerbSpec%20Protocol%20v1.0.pdf)
-- [Protocol v1.0 (DOCX)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/main/IHerbSpec%20Protocol%20v1.0.docx)
-- [Metadata Template (CSV)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/refs/heads/main/IHerbSpec_metadata.csv) *(Right-click and choose “Save Link As…” to download)*
-- [Example Metadata (CSV)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/refs/heads/main/IHerbSpec_metadata-examples.csv) *(Right-click and choose “Save Link As…” to download)*
-- [Table A1 Scoring Examples (CSV)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/main/IHerbSpecProtocol_TableA1.csv)
 
-**The protocol is archived and version controlled at:** [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.15849668.svg)](https://doi.org/10.5281/zenodo.15849668)
 
-🔧 Visit the development repository on GitHub: [IHerbSpec-protocol](https://github.com/IHerbSpec/IHerbSpec-protocol)
+# The IHerbSpec Protocol
+
+
+Herbarium specimens are an unparalleled record of plant diversity that we can leverage via reflectance spectrometry to illuminate plant structure and function across time, space, and taxa. Yet variation in instrumentation and measurement procedures, along with variable preservation of tissues and sources of contamination such as paper and glue, pose significant challenges to global data harmonization.
+ 
+The **IHerbSpec Protocol** was developed to provide clear, community-driven standards for spectral measurement and metadata documentation—establishing best practices to minimize technical errors, maximize data quality, and promote transparency in accordance with the Findable, Accessible, Interoperable, and Reusable ([FAIR](https://doi.org/10.1038/sdata.2016.18)) principles.
+
+By following this protocol, researchers and collections can generate reproducible, interoperable data that support confident aggregation across institutions and unlock new insights in ecology, evolution, and biodiversity sciences.
+
+
+## 👀 Content
+
+You can browse the protocol section by section online, or download the protocol documents and metadata spreadsheets below.
+
+### Sections
+
+- [Preface](protocol/preface.qmd)  
+  *Introduces the motivation, development history, and community collaboration behind the protocol, as well as author information and acknowledgements.*  
+
+- [Part 1: Overview](protocol/part1-overview.qmd)  
+  *Defines the purpose, structure, and guiding principles of the protocol, including minimum requirements and recommended practices.*  
+
+- [Part 2: Measurement and Metadata Workflow](protocol/part2-workflow.qmd)  
+  *Step-by-step workflow for spectral data collection, including setup, measurement sequence, quality control, and metadata entry.*  
+
+- [Part 3: Filename Conventions and Formats](protocol/part3-filenames.qmd)  
+  *Recommended file-naming rules that encode key metadata for traceability and long-term interoperability.*  
+
+- [Part 4: Metadata and Databasing](protocol/part4-metadata.qmd)  
+  *Definitions of metadata fields, controlled vocabularies, and guidelines for archiving and sharing spectral data.*  
+
+- [Part 5: Instrumentation and Materials Guidelines](protocol/part5-instrumentation.qmd)  
+  *Practical guidance for handling instruments, managing materials, and annotating specimens to ensure data quality.*  
+
+- [Part 6: Selecting Tissues for Spectral Measurement](protocol/part6-guidelines.qmd)  
+  *Guidelines for choosing appropriate tissues, understanding sources of variation, and applying decision rules for measurement.*  
+
+- [Appendix I: Number of Measurements per Tissue](protocol/appendix1.qmd)  
+  *Empirical justification for recommended numbers of replicate measurements and guidance on averaging strategies.*  
+
+- [Appendix II: Tissue Metadata for Quality Control](protocol/appendix2.qmd)  
+  *Examples and scoring guidelines for recording tissue condition, contamination, and preservation status in metadata.*
+  
+- [References](protocol/references.qmd)  
+
+
+---
+
+## 📌 Suggested Citation
+
+White DM, NI Ahlstrand, MW Austin, D Bastianelli, S Bazan, K Boughalmi, W Cardinal-McTeague, TLP Couvreur, F Durgante, OM Grace, JA Guzmán Q, K Hansen, M Hopkins, R Jackson, JA Kennedy, S Kothari, AK Lee, É Léveillé-Bourret, JE Meireles, BM Neto-Bradley, CO Nichodemus, NL Quinteros Casaverde, C Rodrigues-Vaz, M Schmull, PS Soltis, D Spalink, CC Vasconcelos, JL Viana, H Tuomisto, T Wells, J Cavender-Bares. 2025. *IHerbSpec Protocol v.1.XX* [https://doi.org/10.5281/zenodo.15849668](https://doi.org/10.5281/zenodo.15849668)
+
+---
+
+
+## 📥 Download IHerbSpec Protocol Files
+
+- [Protocol v1.01 (PDF)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/main/IHerbSpec%20Protocol%20v1.01.pdf)  
+- [Protocol v1.01 (DOCX)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/main/IHerbSpec%20Protocol%20v1.01.docx)  
+- [Metadata Template (CSV)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/refs/heads/main/IHerbSpec_metadata.csv) *(Right-click and choose “Save Link As…” to download)*  
+- [Example Metadata (CSV)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/refs/heads/main/IHerbSpec_metadata-examples.csv) *(Right-click and choose “Save Link As…” to download)*  
+- [Table A1 Scoring Examples (CSV)](https://github.com/IHerbSpec/IHerbSpec-protocol/raw/main/IHerbSpecProtocol_TableA1.csv)  
+
+**The protocol is archived and version controlled at:**  [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.15849668.svg)](https://doi.org/10.5281/zenodo.15849668)
+
+---
+
+🔧 Visit the development repository: [github.com/IHerbSpec/IHerbSpec-protocol](https://github.com/IHerbSpec/IHerbSpec-protocol)
+
+::: {.column-page-inset}
+<div class="content-narrow">
+
+We welcome comments, suggestions, and revisions to improve the protocol, and encourage more members of the herbarium community to join the IHerbSpec Working Group.  
+ 
+To get involved, please reach out via the contact information provided on the GitHub repository, or use the [Contact Us](contact.qmd) page on this site.
+
+</div>
+:::
+
+---
+
+## ©️ License
+
+This protocol and all associated figures, tables, and supplementary materials are licensed under the **Creative Commons Attribution 4.0 International License (CC BY 4.0)**.  
+Users are free to share and adapt the material, provided attribution is given to *IHerbSpec Protocol* (DOI: [10.5281/zenodo.15849668](https://doi.org/10.5281/zenodo.15849668))
+
+---
+
+# Navigate the protocol
+- Proceed to [**Preface**](preface.qmd)
+
+Browse additional parts and appendices:
+
+- [**Part 1**](part1-overview.qmd) – Overview  
+- [**Part 2**](part2-workflow.qmd) – Measurement and Metadata Workflow  
+- [**Part 3**](part3-filenames.qmd) – Filename Conventions and Formats  
+- [**Part 4**](part4-metadata.qmd) – Metadata and Databasing  
+- [**Part 5**](part5-instrumentation.qmd) – Instrumentation and Materials Guidelines  
+- [**Part 6**](part6-guidelines.qmd) – Selecting Tissues for Spectral Measurement  
+- [**References**](references.qmd)
+- [**Appendix I**](appendix1.qmd) – Number of Measurements per Tissue  
+- [**Appendix II**](appendix2.qmd) – Tissue Metadata for Quality Control  
 
