--- a/protocol/part1-overview.qmd
+++ b/protocol/part1-overview.qmd
@@ -3,8 +3,10 @@ title: "Part 1 – Overview"
 include-after-body:
   text: |
     <div style="text-align:center; padding-bottom:2em;">
-      CC BY 4.0 — <em>IHerbSpec Protocol</em>. 
-      DOI: <a href="https://doi.org/10.5281/zenodo.15849668">10.5281/zenodo.15849668</a>
+      <img src="images/cc-by.svg"
+           alt="CC BY 4.0" 
+           style="height:20px; vertical-align:middle; margin-right:6px;">
+      IHerbSpec Protocol (<a href="https://doi.org/10.5281/zenodo.15849668">10.5281/zenodo.15849668</a>)
     </div>
 ---
 
@@ -36,19 +38,19 @@ The IHerbSpec Protocol is organized into modular parts:
 - [**Part 3**](part3-filenames.qmd) – Filename Conventions and Formats  
 - [**Part 4**](part4-metadata.qmd) – Metadata and Databasing  
 - [**Part 5**](part5-instrumentation.qmd) – Instrumentation and Materials Guidelines  
-- [**Part 6**](part6-guidelines.qmd) – Selecting Tissues for Spectral Measurement  
+- [**Part 6**](part6-guidelines.qmd) – Selecting Tissues for Spectral Measurement
+- [**References**](references.qmd)  
 - [**Appendix I**](appendix1.qmd) – Number of Measurements per Tissue  
 - [**Appendix II**](appendix2.qmd) – Tissue Metadata for Quality Control  
-- [**References**](references.qmd)
 
 
-While consistency is essential for integrating spectral datasets, the protocol is **not intended to prescribe a rigid workflow**. It is designed to accommodate a variety of project goals, instrumentation, and institutional capacities—balancing standardization with the flexibility needed for future refinement and innovation.
+While consistency is central to integrating spectral datasets, the protocol is **not intended to prescribe a rigid workflow**. It is designed to accommodate a variety of project goals, instrumentation, and institutional capacities through methodological transparency and balancing standardization with the flexibility needed for future innovation and improvement.
 
 ---
 
 # 1.2 Measurement and Metadata Overview
 
-This section provides a **quick conceptual guide** to the required and recommended components of the protocol and provides links to the respective protocol parts. It also includes relevant notes on adaptability.
+**This section provides a quick conceptual guide** to the required and recommended components of the protocol with relevant notes on adaptability.
 
 ## 1.2.1 Filename Conventions
 
@@ -103,8 +105,8 @@ To ensure key identifiability components for every unprocessed spectra file (whi
 
 ## 1.2.5 Metadata Requirements and Flexibility
 
-- All required and recommended protocol metadata are available for use in the IHerbSpec Metadata Spreadsheet, which can be accessed at [https://iherbspec.github.io/protocol](https://iherbspec.github.io/protocol).  
-- The protocol recommends recording tissue metadata for every individual measurement. This means that every tissue measurement will be recorded in a unique row in the metadata spreadsheet (e.g., 10 measurements have 10 rows).  
+- All required and recommended protocol metadata are available for use in the IHerbSpec Metadata Spreadsheet, which can be downloaded on the [protocol home page](https://iherbspec.github.io/protocol).  
+- The protocol recommends recording tissue metadata for every individual measurement because every measurement will generate a spectra data file. This means that **every tissue measurement will be recorded in a unique row in the metadata spreadsheet** (e.g., 10 measurements have 10 rows).  
 - All fields in Session metadata ([Table 4.1](part4-metadata.qmd#tbl-4-1)), Specimen Metadata ([Table 4.2](part4-metadata.qmd#tbl-4-2)), and Tissue Metadata ([Table 4.3](part4-metadata.qmd#tbl-4-3)) are marked as required or recommended in the field descriptions.  
 
 ---
