--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Welcome to IHerbSpec"
 page-layout: full
+image: images/NaturaSpec-IMG_4840.png
 include-after-body:
   text: |
     <div style="text-align:center; padding-bottom:2em;">
@@ -33,10 +34,10 @@ include-after-body:
 ::: {.column-page-inset}
 <div class="content-narrow">
 
-The International Herbarium Spectral Digitization Working Group (IHerbSpec) is a global consortium advancing standardized methods for collecting and and using reflectance spectra from herbarium specimens.
+The International Herbarium Spectral Digitization Working Group (IHerbSpec) is a global consortium advancing the collection and use of reflectance spectra from herbarium specimens.
 
 
-Our goal is to support integrative plant biodiversity research by harmonizing measurement workflows, metadata standards, and data-sharing practices.
+Our goal is to strengthen integrative plant biodiversity science by harmonizing spectral measurement workflows, metadata standards, and data-sharing practices.
 
 </div>
 :::
@@ -48,6 +49,8 @@ Our goal is to support integrative plant biodiversity research by harmonizing me
 - [IHerbSpec Protocol](protocol.qmd)
 
 - [Selected Publications](publications.qmd)
+
+- [Contact Us](contact.qmd)
 
 ---
 
