--- a/protocol/part4-metadata.qmd
+++ b/protocol/part4-metadata.qmd
@@ -3,16 +3,18 @@ title: "Part 4 – Metadata and Databasing"
 include-after-body:
   text: |
     <div style="text-align:center; padding-bottom:2em;">
-      CC BY 4.0 — <em>IHerbSpec Protocol</em>. 
-      DOI: <a href="https://doi.org/10.5281/zenodo.15849668">10.5281/zenodo.15849668</a>
+      <img src="images/cc-by.svg"
+           alt="CC BY 4.0" 
+           style="height:20px; vertical-align:middle; margin-right:6px;">
+      IHerbSpec Protocol (<a href="https://doi.org/10.5281/zenodo.15849668">10.5281/zenodo.15849668</a>)
     </div>
 ---
 
 This section defines the metadata fields used to describe spectral reflectance measurements of herbarium specimens. This standardization supports interoperability, cross-project data aggregation, and future integration into biodiversity informatics platforms.
 
-Projects can download the **IHerbSpec Metadata Spreadsheet** (available at [https://iherbspec.github.io/protocol](https://iherbspec.github.io/protocol)) as a foundation for organizing their metadata. This spreadsheet includes all **required** and optional but **recommended** fields defined the tables in [Section 4.1](#tbl-4-1). The controlled vocabularies necessary for enumerating certain fields are provided in [Section 4.2](part4-metadata.qmd#controlled-vocabularies). Finally, [Section 4.3](part4-metadata.qmd#guidelines-for-data-archiving-and-sharing) provides general guidelines for data and metadata storage and dissemination.
+Projects can download the **IHerbSpec Metadata Spreadsheet** (available at [https://iherbspec.github.io/protocol](../protocol.qmd#download-iherbspec-protocol-files)) as a foundation for organizing their metadata. This spreadsheet includes all **required** and optional but **recommended** fields defined the tables in [Section 4.1](#tbl-4-1). The controlled vocabularies necessary for enumerating certain fields are provided in [Section 4.2](part4-metadata.qmd#controlled-vocabularies). Finally, [Section 4.3](part4-metadata.qmd#guidelines-for-data-archiving-and-sharing) provides general guidelines for data and metadata storage and dissemination.
 
-While metadata are expected to be disseminated in a flat file format, such as the [IHerbSpec Metadata Spreadsheet](../protocol.qmd#download-iherbspec-protocol-files), fields are presented here in logical groups—project, specimen, and tissue—to support conceptual understanding and integration with local databases.
+While metadata are expected to be disseminated in a flat file format (as in the IHerbSpec Metadata Spreadsheet), fields are presented here in logical groups—project, specimen, and tissue—to support conceptual understanding and integration with local databases.
 
 ---
 
@@ -24,18 +26,18 @@ Session metadata are those metadata usually associated globally with a continuou
 
 | Metadata Field | Filename Code ([Table 3.2](part3-filenames.qmd#tbl-3-2)) |  Status | Field Description | Data Type |
 |------------|--------|--------|-------------------|-----------|
-| `projectId` | `PI`  | Required | Unique identifier for the spectral measurement project. Example: `HUHERYspec1`. | TEXT |
-| `sessionId` | `SN`  | Required | Unique identifier for a measurement session, generated as `YYYYMMDDHHMM`. Example: `20240617132251`. | TEXT |
-| `instrumentModel` | -  | Required | Spectroradiometer model name. Example: `SVC HR-1024i`. | TEXT |
-| `opticalSetupDescription` | -  | Required | Description of optical probe setup. Example: `LC-RP contact probe with leaf clip removed`. | TEXT |
-| `measurementSettings` | -  | Required | Instrument settings for measurements. Example: `2 seconds, high light setting`. | TEXT |
-| `whiteReferenceDescription` | -  | Required | Material of the white reference. Example: `Spectralon SL Standard 99%`. | TEXT |
+| `projectId` | `PI`  | Required | Unique identifier for the spectral measurement project. <br>Example: `HUHERYspec1`. | TEXT |
+| `sessionId` | `SN`  | Required | Unique identifier for a measurement session, generated as `YYYYMMDDHHMM`.<br>Example: `20240617132251`. | TEXT |
+| `instrumentModel` | -  | Required | Spectroradiometer model name.<br>Example: `SVC HR-1024i`. | TEXT |
+| `opticalSetupDescription` | -  | Required | Description of optical probe setup.<br>Example: `LC-RP contact probe with leaf clip removed`. | TEXT |
+| `measurementSettings` | -  | Required | Instrument settings for measurements.<br>Example: `2 seconds, high light setting`. | TEXT |
+| `whiteReferenceDescription` | -  | Required | Material of the white reference.<br>Example: `Spectralon SL Standard 99%`. | TEXT |
 | `operator` | -  | Optional | Name(s) of person(s) conducting measurements. | TEXT |
-| `lightSourceType` | -  | Optional | Light source for optical setup. Example: `tungsten halogen`. | TEXT |
-| `distanceTargetToSensor` | -  | Optional | Distance (mm) between target tissue and sensor face. Example: `12`. | NUMERIC |
-| `lensFieldOfView` | -  | Optional | Angle (degrees) of sensor field of view. Example: `22.5`. | NUMERIC |
-| `angleLightToSensor` | -  | Optional | Angle (degrees) of light source to sensor. Example: `10`. | NUMERIC |
-| `measurementAreaDiameter` | -  | Optional | Diameter (mm) of illuminated tissue area. Example: `6`. | NUMERIC |
+| `lightSourceType` | -  | Optional | Light source for optical setup.<br>Example: `tungsten halogen`. | TEXT |
+| `distanceTargetToSensor` | -  | Optional | Distance (mm) between target tissue and sensor face.<br>Example: `12`. | NUMERIC |
+| `lensFieldOfView` | -  | Optional | Angle (degrees) of sensor field of view.<br>Example: `22.5`. | NUMERIC |
+| `angleLightToSensor` | -  | Optional | Angle (degrees) of light source to sensor.<br>Example: `10`. | NUMERIC |
+| `measurementAreaDiameter` | -  | Optional | Diameter (mm) of illuminated tissue area.<br>Example: `6`. | NUMERIC |
 
 ---
 
@@ -49,48 +51,52 @@ Specimen metadata include identifiers and information about the physical specime
 
 Users should **avoid duplicating metadata that are already digitized, maintained, and available in herbarium or institutional platforms**, as these sources are better suited for future updates. Instead, users are encouraged to reference those records and supplement only missing required or recommended fields. Due to variation in the metadata recorded on institutional platforms, users should apply caution in the interpretation of presence or absence of determination information or any other recommended but optional fields.
 
+
 | Metadata Field | Filename Code ([Table 3.2](part3-filenames.qmd#tbl-3-2)) |  Status | Field Description | Data Type |
 |------------|-------|--------|--------|-------------------|-----------|
-| `herbariumCode` | `HC` | Required | Acronym for herbarium or collection (Index Herbariorum code). Examples: `GH`, `P`, `US-Botany`. | TEXT |
-| `specimenId` | `SI` | Required | Identifier for specimen or record (catalog no., barcode, GUID, or collector+number). Examples: `00238762`, `Thorne24070a`. | TEXT |
-| `scientificName` | - | Optional | Full scientific name at lowest confident rank. Examples: *Quercus bicolor*, *Erythroxylum coca ipadu*. | TEXT |
-| `identificationQualifier` | - | Optional | Uncertainty in taxonomic ID (Darwin Core). Examples: `cf.`, `aff.` | TEXT |
-| `identifiedBy` | - | Optional | - | Person/group who made the identification. Example: `T. Plowman`. | TEXT |
-| `dateIdentified` | - | Optional | Date of identification. Examples: `1999`, `2004-12-30`. | TEXT |
+| `herbariumCode` | `HC` | Required | Acronym for herbarium or collection (Index Herbariorum code).<br>Examples: `GH`, `P`, `US-Botany`. | TEXT |
+| `specimenId` | `SI` | Required | Identifier for specimen or record (catalog no., barcode, GUID, or collector+number).<br>Examples: `00238762`, `Thorne24070a`. | TEXT |
+| `scientificName` | - | Optional | Full scientific name at lowest confident rank.<br>Examples: *Quercus bicolor*, *Erythroxylum coca ipadu*. | TEXT |
+| `identificationQualifier` | - | Optional | Uncertainty in taxonomic ID (Darwin Core).<br>Examples: `cf.`, `aff.` | TEXT |
+| `identifiedBy` | - | Optional | Person/group who made the identification.<br>Example: `T. Plowman`. | TEXT |
+| `dateIdentified` | - | Optional | Date of identification.<br>Examples: `1999`, `2004-12-30`. | TEXT |
 | `isTempControlled` | - | Optional | Whether storage has active temperature control. | BOOLEAN |
-| `annualTempMin` | - | Optional | Minimum annual storage temperature (°C). Example: `18`. | TEXT |
-| `annualTempMax` | - | Optional | Maximum annual storage temperature (°C). Example: `26`. | TEXT |
+| `annualTempMin` | - | Optional | Minimum annual storage temperature (°C).<br>Example: `18`. | TEXT |
+| `annualTempMax` | - | Optional | Maximum annual storage temperature (°C).<br>Example: `26`. | TEXT |
 | `isHumidityControlled` | - | Optional | Whether storage has active humidity control. | BOOLEAN |
-| `annualHumidityMin` | - | Optional | Minimum annual storage relative humidity (%). Example: `20`. | TEXT |
-| `annualHumidityMax` | - | Optional | Maximum annual storage relative humidity (%). Example: `60`. | TEXT |
+| `annualHumidityMin` | - | Optional | Minimum annual storage relative humidity (%).<br>Example: `20`. | TEXT |
+| `annualHumidityMax` | - | Optional | Maximum annual storage relative humidity (%).<br>Example: `60`. | TEXT |
 
----
+
+
+
 
 ### Table 4.3: Tissue Metadata {#tbl-4-3}
 
 Fields describing the type, condition, and position of the tissue measured. Includes **required** and **recommended** metadata for linking spectral measurements to individual tissue units. Note that timestamps for tissue measurement files are often captured within the file.
 
+
 | Metadata Field | Filename Code ([Table 3.2](part3-filenames.qmd#tbl-3-2)) |  Status   | Field Description          | Data Type |
 |-----------------------------|--------|--------|--------|----------|--------------------------------------------------------------------------------------------------------------------|-----------|
-| `backgroundClass`             | `BG` | Required | EEnumerated abbreviated code from Background Class Codes Table 4.7 describing the type of background used behind target tissue. Both abbreviated codes and descriptive codes are accepted. Examples: `BGW`, `BGB`, `BGP`. | ENUM [Table 4.7](#tbl-4-7) |
+| `backgroundClass`             | `BG` | Required | Enumerated abbreviated code from Background Class Codes [Table 4.7](#tbl-4-7) describing the type of background used behind target tissue. Both abbreviated codes and descriptive codes are accepted.<br>Examples: `BGW`, `BGB`, `BGP`. | ENUM<br>([Table 4.7](#tbl-4-7)) |
 | `hasLowReflectanceBackground` | - | Required | True or False statement that the background (black or paper) has low reflectance as defined as less than 4% reflectance across the spectral range of the instrument. For a paper background, this would be scored `false`.       | BOOLEAN |
-| `backgroundDescription`       | - | Cond. Req. | Description of the black or other background material, including manufacturer and product information when available. Not required for paper backgrounds. Required field when tissue has black or other type (not paper) of background. Example: `Musou IR Flock`  | TEXT |
-| `targetClass`                 | `TC` | Required | Free text or enumerated code from Target Class Codes (Table 4.5) describing type of tissue or background being measured. Both abbreviated codes and full codes can be used. Examples: `AD`, `perigynium`.       | TEXT or ENUM (Table 4.5) |
-| `targetTissueId`              | `TN` | Optional | Character index tracking the measured tissue units when multiple tissues are measured from a single specimen (e.g., `loose1`, `1`, `2`). For compound or more complex structures, projects are encouraged to develop their own consistent naming convention. Examples: `loose1`, `leaflet1`, `petal1`.           | TEXT |
-| `tissueDevelopmentalStage`    | - | Required | Tissue developmental stage as coded in Developmental Stage Class Codes [Table 4.4](#tbl-4-4). Examples: `Mature`, `Uncertain`.         | ENUM [Table 4.4](#tbl-4-4) |
+| `backgroundDescription`       | - | Cond. Req. | Description of the black or other background material, including manufacturer and product information when available. Not required for paper backgrounds. Required field when tissue has black or other type (not paper) of background.<br>Example: `Musou IR Flock`  | TEXT |
+| `targetClass`                 | `TC` | Required | Free text or enumerated code from Target Class Codes ([Table 4.5](#tbl-4-5)) describing type of tissue or background being measured. Both abbreviated codes and full codes can be used.<br>Examples: `AD`, `perigynium`.       | TEXT or ENUM<br>([Table 4.5](#tbl-4-5)) |
+| `targetTissueId`              | `TN` | Optional | Character index tracking the measured tissue units when multiple tissues are measured from a single specimen (e.g., `loose1`, `1`, `2`). For compound or more complex structures, projects are encouraged to develop their own consistent naming convention.<br>Examples: `loose1`, `leaflet1`, `petal1`.           | TEXT |
+| `tissueDevelopmentalStage`    | - | Required | Tissue developmental stage as coded in Developmental Stage Class Codes [Table 4.4](#tbl-4-4).<br>Examples: `Mature`, `Uncertain`.         | ENUM<br>([Table 4.4](#tbl-4-4)) |
 | `hasBackgroundInMeasurement`  | - | Required | True or false values indicating that the target tissue does not cover the full measurement area and the background is part of the measurement.      | BOOLEAN |
-| `percentBackgroundInMeasurement` | - | Optional | Numeric estimate for the percentage of the measurement area that is not covered by the target tissue and is background material (black background or herbarium paper). It is recommended to describe the estimation method in the comment field. Example: `25`.          | INTEGER |
-| `hasGlue`                     | - | Required | True/False/Uncertain: glue present in measurement area.                | ENUM (true/false/uncertain) |
-| `hasNonGlueContamination`     | - | Required | True, false, or uncertain values indicating a contaminant other than glue is present in the measurement area. This includes foreign biotic or abiotic agents on the target tissue, such as fungus or preservatives.    | ENUM (true/false/uncertain) |
-| `measurementFlags`            | - | Optional | SStandardized categorical descriptors of the condition of the tissue within the measurement area. Values are selected from the predefined Tissue Descriptor Codes [Table 4.6](#tbl-4-6). Multiple descriptors should be separated with a pipe character (`|`). Example: `GoodPreservation|PathogenPresent`. | ENUM (Table 4.6) |
-| `tissueNotes`               | - | Optional | Free-text field used to record additional observations on the condition of the specimen that may aid interpretation of spectral data. It can be used to clarify or elaborate on descriptors already included in measurementFlags, such as the conditions evidencing the quality of preservation (e.g., a MediumPreservation flag could be explained with the note, 'measurement area discolored and wrinkled'). Notes should specify whether the information applies to the measurement area, the tissue unit, or the specimen as a whole. Examples: `mold in measurement area`, `formaldehyde preserved`.   | TEXT |
-| `tissueLocation`              | - | Optional | The location of the target tissue on the herbarium sheet. For mounted tissues, record as an `X,Y` coordinate in centimeters, with **`0,0` at the top-left corner of the sheet** (e.g., `17,29`; see Fig. 4.2). If the sheet has non-square angles, align it flush with the left-side ruler. For unmounted tissues, provide a descriptive note indicating location. Examples: `17,29`, `envelope TCAD_TN1`.     | TEXT (coordinates preferred) |
-| `comment`                    | - | Optional | Free-text field for recording any additional notes relevant to the measurement, including observations about the instrument, session, specimen, tissue, or data quality that are not captured elsewhere in the metadata. Example: `Amazing specimen.`  | TEXT |
-| `measurementIndex`            | `IDX` | Required | The measurement number index appended to the base filename (Part 3, Table 3.2: IDX) to properly associate each row of metadata with its single, corresponding measurement file. Example: `0001`.               | TEXT |
+| `percentBackgroundInMeasurement` | - | Optional | Numeric estimate for the percentage of the measurement area that is not covered by the target tissue and is background material (black background or herbarium paper). It is recommended to describe the estimation method in the comment field.<br>Example: `25`.          | INTEGER |
+| `hasGlue`                     | - | Required | True/False/Uncertain: glue present in measurement area.                | ENUM<br>(true/false/uncertain) |
+| `hasNonGlueContamination`     | - | Required | True, false, or uncertain values indicating a contaminant other than glue is present in the measurement area. This includes foreign biotic or abiotic agents on the target tissue, such as fungus or preservatives.    | ENUM<br>(true/false/uncertain) |
+| `measurementFlags`            | - | Optional | SStandardized categorical descriptors of the condition of the tissue within the measurement area. Values are selected from the predefined Tissue Descriptor Codes [Table 4.6](#tbl-4-6). Multiple descriptors should be separated with a pipe character (`|`).<br>Example: `GoodPreservation|PathogenPresent`. | ENUM<br>(Table 4.6) |
+| `tissueNotes`               | - | Optional | Free-text field used to record additional observations on the condition of the specimen that may aid interpretation of spectral data. It can be used to clarify or elaborate on descriptors already included in measurementFlags, such as the conditions evidencing the quality of preservation (e.g., a MediumPreservation flag could be explained with the note, 'measurement area discolored and wrinkled'). Notes should specify whether the information applies to the measurement area, the tissue unit, or the specimen as a whole.<br>Examples: `mold in measurement area`, `formaldehyde preserved`.   | TEXT |
+| `tissueLocation`              | - | Optional | The location of the target tissue on the herbarium sheet. For mounted tissues, record as an `X,Y` coordinate in centimeters, with **`0,0` at the top-left corner of the sheet** (e.g., `17,29`; see Fig. 4.2). If the sheet has non-square angles, align it flush with the left-side ruler. For unmounted tissues, provide a descriptive note indicating location.<br>Examples: `17,29`, `envelope TCAD_TN1`.     | TEXT<br>(coordinates preferred) |
+| `comment`                    | - | Optional | Free-text field for recording any additional notes relevant to the measurement, including observations about the instrument, session, specimen, tissue, or data quality that are not captured elsewhere in the metadata.<br>Example: `Amazing specimen.`  | TEXT |
+| `measurementIndex`            | `IDX` | Required | The measurement number index appended to the base filename (Part 3, Table 3.2: IDX) to properly associate each row of metadata with its single, corresponding measurement file.<br>Example: `0001`.               | TEXT |
 
 ---
 
-![**Fig. 4.2**: Diagram of coordinate system for scoring `tissueLocation` in [Tissue Metadata](#tbl-4.3). Herbarium sheet is placed on top of the benchtop black background with centimeter rulers at top and left sides for '`x,y`' notation of measurement area (white dashed circles) in centimeters with `0,0` at the top left. Black background cards are placed under unglued portions of leaves. From left to right, tissue `TCAB_TN3` has the location `10,26`, tissue `TCAD_TN2` has location `17,16` and tissue `TCAD_TN1` is stored with a label in a glassine envelope inside the packet with location `envelope TCAD_TN1`. For reference, specimen NEBC_00651639 metadata fields are proposed in [Appendix II](appendix2.qmd). Specimen courtesy of the New England Botanical Society.](images/Fig4.2-coordinatesWh.png){#fig-4-2 fig-align="center" width="800px"}
+![**Fig. 4.2**: Diagram of coordinate system for scoring `tissueLocation` in [Table 4.3: Tissue Metadata](#tbl-4.3). Herbarium sheet is placed on top of the benchtop black background with centimeter rulers at top and left sides for '`x,y`' notation of measurement area (white dashed circles) in centimeters with `0,0` at the top left. Black background cards are placed under unglued portions of leaves. From left to right, tissue `TCAB_TN3` has the location `10,26`, tissue `TCAD_TN2` has location `17,16` and tissue `TCAD_TN1` is stored with a label in a glassine envelope inside the packet with location `envelope TCAD_TN1`. For reference, specimen NEBC_00651639 metadata fields are proposed in [Appendix II](appendix2.qmd). Specimen courtesy of the New England Botanical Society.](images/Fig4.2-coordinatesWh.png){#fig-4-2 fig-align="center" width="800px"}
 
 ---
 
@@ -123,7 +129,7 @@ Available codes for enumerating the required `targetClass` metadata [Table 4.3](
 | `P`    | `Paper`       | Herbarium sheet paper, recorded when used as background for other target tissue measurements. |
 | `AB`   | `LeafAbaxial`                | Abaxial leaf surface.          |
 | `AD`   | `LeafAdaxial`                | Adaxial leaf surface.          |
-| `LF`   | `Leaf`        | Leaf surface. Applied when the abaxial and adaxial side cannot be differentiated or when leaves are terete or otherwise not bifacial (e.g. *Senecio rowleyanus*). |
+| `LF`   | `Leaf`        | Leaf surface. Applied when the abaxial and adaxial side cannot be differentiated or when leaves are terete or otherwise not bifacial (e.g. [*Curio rowleyanus*](https://powo.science.kew.org/taxon/urn:lsid:ipni.org:names:1011412-1)). |
 | `PT`   | `Petal`       | Petal.          |
 | `IF`   | `Inflorescence`              | Inflorescence.  |
 | `BR`   | `Bract`       | Bract.          |
@@ -180,7 +186,7 @@ Available codes for enumerating the required `tissueBackgroundClass` metadata [T
   
 - To facilitate reuse, users may also choose to also share tabular data files (e.g., .csv) with samples in rows and columns for metadata fields and spectral band values. If processed spectra are included (e.g., interpolated, splice/jump-corrected, or continuum- removed), the applied processing steps should be clearly documented.
   
-- See example of data and metadata sharing here: [https://doi.org/10.7910/DVN/LXPHBC](https://doi.org/10.7910/DVN/LXPHBC)
+- See<br>Example of data and metadata sharing here: [https://doi.org/10.7910/DVN/LXPHBC](https://doi.org/10.7910/DVN/LXPHBC)
 
 ---
 
