--- a/protocol/part5-instrumentation.qmd
+++ b/protocol/part5-instrumentation.qmd
@@ -3,8 +3,10 @@ title: "Part 5 – Instrumentation and Materials Guidelines"
 include-after-body:
   text: |
     <div style="text-align:center; padding-bottom:2em;">
-      CC BY 4.0 — <em>IHerbSpec Protocol</em>. 
-      DOI: <a href="https://doi.org/10.5281/zenodo.15849668">10.5281/zenodo.15849668</a>
+      <img src="images/cc-by.svg"
+           alt="CC BY 4.0" 
+           style="height:20px; vertical-align:middle; margin-right:6px;">
+      IHerbSpec Protocol (<a href="https://doi.org/10.5281/zenodo.15849668">10.5281/zenodo.15849668</a>)
     </div>
 ---
 
@@ -39,7 +41,7 @@ include-after-body:
    - Follow manufacturer SOP for spectroradiometer maintenance. If possible, send the instrument to the manufacturer at regular intervals for maintenance (e.g., every two years).  
    - Have fiber optic cables checked by the manufacturer annually and replace damaged fiber optic cables.  
 
-2. **For background and white reference measurement requirements, see [Section 1.2](part1-overview.qmd).**  
+2. **For background and white reference measurement requirements, see [Section 1.2.2](part1-overview.qmd#white-reference-and-background-measurements).**  
    - White reference scans are typically not saved as a separate file, but the white reference digital numbers (raw sensor values) should be included in each target spectrum file (e.g., `.sig` format). These values are used by the instrument software to calculate reflectance from raw radiance.  
    - Black background materials are required to have less than 4% reflectance across all wavelengths (see [Fig. 1.1](part1-overview.qmd#fig-1-1); e.g., IR Flock Sheet from [Musou Black USA](https://musoublackusa.com/products/ir-flock-sheet)).  
    - If measuring leaves on herbarium paper on a benchtop, place a black mat under the herbarium sheets to prevent contaminating reflectance from the benchtop (see [Fig. 4.2](part4-metadata.qmd#fig-4-2)). Black felt (3–5 mm thick) is a practical and cost-effective choice for this purpose.  
@@ -47,7 +49,7 @@ include-after-body:
 3. **Target measurements of background material (black or paper) must be linked to tissue measurements using filename conventions ([Part 3](part3-filenames.qmd)).**  
    - This supports quality control of background conditions and enables development of spectral unmixing approaches to isolate tissue reflectance.  
 
-4. **Wear gloves and carefully handle all tissues, white reference, black backgrounds, and calibrated reflectance standards to keep them clean (see [5.1 Precautions](#51-precautions)).**  
+4. **Wear gloves and carefully handle all tissues, white reference, black backgrounds, and calibrated reflectance standards to keep them clean (see [5.1 Precautions](#precautions)).**  
 
 5. **Calibrated reflectance standards:**  
    - Institutions should consider purchasing calibrated reflectance standards, such as Spectralon® Calibrated (SL Standard) Diffuse Reflectance Standards. These should be kept clean and separate from ‘working’ white references, and used for long-term assessment of instrument performance, optical drift, and the condition of reference materials (e.g., white references and black backgrounds).  
