--- a/protocol/references.qmd
+++ b/protocol/references.qmd
@@ -2,19 +2,32 @@
 title: "References"
 ---
 
-Cavender-Bares J, White DM, Ahlstrand NI, Austin M, Bastianelli D, Bazan S, Boughalmi K, Cardinal-McTeague W, Chacón-Madrigal E, Couvreur TLP, Davis C, Durgante FM, Grace OM, Q JAG, Hansen K, Hernández-Leal MS, Hopkins MJG, Jackson R, Kothari S, Lee AK, Léveillé-Bourret É, Pinto-Ledezma J, Casaverde NLQ, Meireles JE, Nichodemus CO, Schmull M, Soltis DE, Soltis PS, Tuomisto H, Ustin S, Vasconcelos CC. 2025. NextGeneration specimen digitization: The international herbarium community goes spectral! *EcoEvoRxiv* [preprint]. [https://doi.org/10.32942/X2V927](https://doi.org/10.32942/X2V927).  
+<!-- Page-only styles -->
+<style>
+  .references p {
+    margin-left: 2em;     /* indent the whole block */
+    text-indent: -2em;    /* pull back the first line */
+    line-height: 1.5;     /* nicer spacing */
+  }
+</style>
 
-Durgante FM, Higuchi N, Almeida A, Vicentini A. 2013. Species Spectral Signature: Discriminating closely related plant species in the Amazon with Near-Infrared Leaf-Spectroscopy. *Forest Ecology and Management* 291:240–248. [https://doi.org/10.1016/j.foreco.2012.10.045](https://doi.org/10.1016/j.foreco.2012.10.045).  
+<div class="references">
 
-Hadlich HL, Durgante FM, dos Santos J, Higuchi N, Chambers JQ, Vicentini A. 2018. Recognizing Amazonian tree species in the field using bark tissues spectra. *Forest Ecology and Management* 427:296–304. [https://doi.org/10.1016/j.foreco.2018.06.002](https://doi.org/10.1016/j.foreco.2018.06.002).  
+Cavender-Bares J, White DM, Ahlstrand NI, Austin M, Bastianelli D, Bazan S, Boughalmi K, Cardinal-McTeague W, Chacón-Madrigal E, Couvreur TLP, Davis C, Durgante FM, Grace OM, Q JAG, Hansen K, Hernández-Leal MS, Hopkins MJG, Jackson R, Kothari S, Lee AK, Léveillé-Bourret É, Pinto-Ledezma J, Casaverde NLQ, Meireles JE, Nichodemus CO, Schmull M, Soltis DE, Soltis PS, Tuomisto H, Ustin S, Vasconcelos CC. 2025. **NextGeneration specimen digitization: The international herbarium community goes spectral!** *EcoEvoRxiv* [preprint]. [https://doi.org/10.32942/X2V927](https://doi.org/10.32942/X2V927).  
 
-Kühn P, Proß T, Römermann C, Wesche K, Bruelheide H. 2024. Using near-infrared spectroscopy to predict nitrogen and phosphorus concentrations of herbarium specimens under different storage conditions. *Plant Methods* 20:19. [https://doi.org/10.1186/s13007-024-01146-x](https://doi.org/10.1186/s13007-024-01146-x).  
+Durgante FM, Higuchi N, Almeida A, Vicentini A. 2013. **Species Spectral Signature: Discriminating closely related plant species in the Amazon with Near-Infrared Leaf-Spectroscopy**. *Forest Ecology and Management* 291:240–248. [https://doi.org/10.1016/j.foreco.2012.10.045](https://doi.org/10.1016/j.foreco.2012.10.045).  
 
-Mersni J, Bazan S, Baby E, Bonnal V, Bastianelli D. 2025. Protocol for NIR spectra acquisition on herbarium specimen. *Agritrop*. [https://doi.org/10.18167/agritrop/00880](https://doi.org/10.18167/agritrop/00880).  
+Hadlich HL, Durgante FM, dos Santos J, Higuchi N, Chambers JQ, Vicentini A. 2018. **Recognizing Amazonian tree species in the field using bark tissues spectra**. *Forest Ecology and Management* 427:296–304. [https://doi.org/10.1016/j.foreco.2018.06.002](https://doi.org/10.1016/j.foreco.2018.06.002).  
 
-Neto-Bradley BM, Bonnet P, Goëau H, Joly A, Cavender-Bares J, Coomes DA. 2025. Using reflectance spectra and Pl@ntNet to identify herbarium specimens: a case study with *Lithocarpus*. *New Phytologist*. [https://doi.org/10.1111/nph.70258](https://doi.org/10.1111/nph.70258).  
+Kühn P, Proß T, Römermann C, Wesche K, Bruelheide H. 2024. **Using near-infrared spectroscopy to predict nitrogen and phosphorus concentrations of herbarium specimens under different storage conditions**. *Plant Methods* 20:19. [https://doi.org/10.1186/s13007-024-01146-x](https://doi.org/10.1186/s13007-024-01146-x).  
 
-White DM, Cavender-Bares J, Davis CC, Guzmán Q JA, Kothari S, Robles JM, Meireles JE. 2025. Seeing herbaria in a new light: leaf reflectance spectroscopy unlocks trait and classification modeling in plant biodiversity collections. *New Phytologist*. [https://doi.org/10.1111/nph.70357](https://doi.org/10.1111/nph.70357).  
+Mersni J, Bazan S, Baby E, Bonnal V, Bastianelli D. 2025. **Protocol for NIR spectra acquisition on herbarium specimen**. *Agritrop*. [https://doi.org/10.18167/agritrop/00880](https://doi.org/10.18167/agritrop/00880).  
+
+Neto-Bradley BM, Bonnet P, Goëau H, Joly A, Cavender-Bares J, Coomes DA. 2025. **Using reflectance spectra and Pl@ntNet to identify herbarium specimens: a case study with *Lithocarpus***. *New Phytologist*. [https://doi.org/10.1111/nph.70258](https://doi.org/10.1111/nph.70258).  
+
+White DM, Cavender-Bares J, Davis CC, Guzmán Q JA, Kothari S, Robles JM, Meireles JE. 2025. **Seeing herbaria in a new light: leaf reflectance spectroscopy unlocks trait and classification modeling in plant biodiversity collections**. *New Phytologist*. [https://doi.org/10.1111/nph.70357](https://doi.org/10.1111/nph.70357).  
+
+</div>
 
 ---
 
