--- a/protocol/preface.qmd
+++ b/protocol/preface.qmd
@@ -35,7 +35,7 @@ To support global data harmonization and scientific reproducibility, this docume
 The International Herbarium Spectral Digitization (**IHerbSpec**) Working Group was established in December 2024 as a global consortium focused on advancing the use of reflectance spectroscopy of herbarium specimens for ecological and evolutionary studies.  
 The group actively collaborates to identify common challenges, facilitate collaborations, and develop best practices.
 
-This protocol is the outcome of IHerbSpec’s initial collaborative phase. From December 2024 to June 2025, members convened virtually to share project-specific workflows and align measurement strategies. The effort culminated in an in-person workshop at the Harvard University Herbaria (May 1–3, 2025), where members reached consensus on key elements of the protocol, including:
+This protocol is one of the primary products of IHerbSpec’s initial collaborative phase. From December 2024 to June 2025, members convened virtually to share project-specific workflows and align measurement strategies. The protocol was developed through an open, collaborative process, with a majority of IHerbSpec members contributing to discussions and decisions and serving as authors. The effort culminated in an in-person workshop at the Harvard University Herbaria (May 1–3, 2025), where members reached consensus on key elements of the protocol, including:
 
 1. The minimum and recommended number of measurements for leaf tissues (see [Section 1.2.3: Strategy and number of tissue measurements](part1-overview.qmd#strategy-and-number-of-tissue-measurements)).  
 2. Tissue condition and contamination metadata (see [Section 1.2.6: Scoring metadata pertaining to tissue condition and contamination](part1-overview.qmd#scoring-metadata-pertaining-to-tissue-condition-and-contamination)).  
